--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/node": "^20.1.0",
+    "@types/pg": "^8.6.6",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
